--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -20,6 +20,9 @@
 \usepackage{listings}
 \usepackage{enumitem}
 
+\usepackage{tikz}
+\usetikzlibrary{positioning,chains,fit,shapes,calc}
+
 % \renewcommand{\familydefault}{\rmdefault}
 
 \newtheorem{defin}{Definícia}[section]
@@ -65,7 +68,7 @@ plainpages=false
 
   \input{02 Thesis_info}
 
-  \includepdf[pages={1}, offset=25 -75]{zadanieRD.pdf}
+  \includepdf[pages={1}, offset=25 -75]{zadanieRD--update.pdf}
 
   \input{03 Podakovanie}
 
