--- a/07 kap1.tex
+++ b/07 kap1.tex
@@ -97,6 +97,12 @@ $A (A^- y) = A(A^- A x_0) = A x_0 = y$.$\square$
 \end{center}
 \end{dokaz}
 
+\begin{theorem}
+\label{veta4}
+Lineárny systém $Ax = y$ má riešenie práve vtedy, ak $A A^- y = y$ pre ľubovoľnú $g$-inverziu $A^-$.
+Ak $x_0$ je riešením tohto systému, existuje taká $g$-inverzia $A^-$, že $x_0 = A^- y$.
+\end{theorem}
+
 \subsection{Projekčné matice}
 
 Pri práci s lineárnym regresným modelom sa nám zídu poznatky o projekčných maticiach, napr. pri metóde najmenších štvorcov.
